[workspace]
members = ["kornia-v4l-capture", "kornia-gst-capture", "kornia-imgproc-sobel", "rerun-video-sink"]
resolver = "2"

[workspace.dependencies]
dora-node-api = { version = "0.3.12", features = ["tracing"] }
kornia-io = { git = "https://github.com/kornia/kornia-rs.git", tag = "v0.1.10-rc.3" }
kornia-image = { git = "https://github.com/kornia/kornia-rs.git", tag = "v0.1.10-rc.3" }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs.git", tag = "v0.1.10-rc.3" }
rerun = "0.23"